force-app/main/default/objects/QATest_Run__c/QATest_Run__c.object-meta.xml
<CustomObject>
    <label>QATest Run</label>
    <nameField>
        <label>QATest Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QATest Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>