force-app/main/default/objects/QATest_Run__c/fields/Profile_Tested__c.field-meta.xml
<CustomField>
    <fullName>Profile_Tested__c</fullName>
    <label>Profile Tested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA Standard</fullName>
            </value>
            <value>
                <fullName>NA Elevated</fullName>
            </value>
            <value>
                <fullName>Intl Standard</fullName>
            </value>
            <value>
                <fullName>Intl Elevated</fullName>
            </value>
            <value>
                <fullName>Media Standard</fullName>
            </value>
            <value>
                <fullName>Media Elevated</fullName>
            </value>
            <value>
                <fullName>Analytics Marketing</fullName>
            </value>
            <value>
                <fullName>Analytics Standard</fullName>
            </value>
            <value>
                <fullName>Analytics Elevated</fullName>
            </value>
            <value>
                <fullName>HGP Standard</fullName>
            </value>
            <value>
                <fullName>HGP Elevated</fullName>
            </value>
            <value>
                <fullName>PCHA Standard</fullName>
            </value>
            <value>
                <fullName>PCHA Elevated</fullName>
            </value>
            <value>
                <fullName>Healthbox Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>