force-app/main/default/objects/QATest_Run__c/fields/QATest_Script__c.field-meta.xml
<CustomField>
    <fullName>QATest_Script__c</fullName>
    <label>QATest Script</label>
    <referenceTo>QATest_Script__c</referenceTo>
    <relationshipLabel>QATest Runs</relationshipLabel>
    <relationshipName>QATest_Runs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>