force-app/main/default/objects/QATest_Run__c/fields/Test_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Run_Date__c</fullName>
    <label>Test Run Date</label>
    <type>DateTime</type>
</CustomField>