force-app/main/default/objects/QATest_Run__c/fields/Test_Run_Verdict__c.field-meta.xml
<CustomField>
    <fullName>Test_Run_Verdict__c</fullName>
    <label>Test Run Verdict</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Inconclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>